# OpenLib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  init.sh
docs/templates/: c_copyright_header.txt
examples/: Array.cpp  CMakeLists.txt  main.cpp
include/openlib/: Array.h  Serializer.h
src/: Array.cpp  CMakeLists.txt  Serializer.cpp
src/openlib/: CMakeLists.txt  array.hpp  log.hpp  math.hpp  time.hpp
src/openlib/array/: Array.cpp  Array.hpp  BufferArray.cpp  BufferArray.hpp
src/openlib/log/: Log.cpp  Log.hpp  LogHandler.cpp  LogHandler.hpp  LogLevel.hpp
src/openlib/math/: Angle.cpp  Angle.hpp  Range.cpp  Range.hpp  Vector2d.cpp  Vector2d.hpp
src/openlib/time/: ElapsedTime.cpp  ElapsedTime.hpp
src/tests/: CMakeLists.txt  arraytest.cpp  logtest.cpp  mathtest.cpp  tests.cpp  timetest.cpp
tests/: CMakeLists.txt  test_Array.cpp  test_Serializer.cpp  test_main.cpp
